# crypto-primitives

./: Cargo.toml
cp-benches/: Cargo.toml
src/: lib.rs
src/crh/: mod.rs
src/crh/bowe_hopwood/: .#mod.rs
src/crh/injective_map/: mod.rs
src/crh/pedersen/: mod.rs
src/merkle_tree/: mod.rs
src/prf/blake2s/: mod.rs
