[package]
name = "ark-crypto-primitives"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "A library of useful cryptographic primitives"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/crypto-primitives"
documentation = "https://docs.rs/ark-crypto-primitives/"
keywords = [ "r1cs", "pedersen", "blake2s", "snark", "schnorr" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
ark-ff = {git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features=false, features=["asm","parallel"] }
ark-ec = {git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri", default-features=false }
ark-std = {version = "0.2.1-alpha.0", git = "https://github.com/SRI-CSL/utils", default-features = false}
ark-relations = {git = "https://github.com/SRI-CSL/snark", branch = "v3_sri", default-features=false }
ark-serialize = {git = "https://github.com/SRI-CSL/algebra", branch = "v3_sri",  default-features=false , features = ["derive"] } 

ark-sponge = { git = "https://github.com/SRI-CSL/sponge", default-features = false }

blake2 = { version = "0.9", default-features = false }
digest = "0.9"
ark-r1cs-std = {git = "https://github.com/SRI-CSL/r1cs-std", branch = "v3_sri",  default-features=false, optional = true } 
ark-snark = {git = "https://github.com/SRI-CSL/snark", branch = "v3_sri", default-features=false }



ark-nonnative-field = {git = "https://github.com/SRI-CSL/nonnative", branch = "v3_sri", default-features=false, optional = true }

rayon = { version = "1.0", optional = true }
derivative = { version = "2.0", features = ["use_core"] }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }

[features]
default = ["std"]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-relations/std" ]
print-trace = [ "ark-std/print-trace" ]
parallel = [ "std", "rayon", "ark-ec/parallel", "ark-std/parallel", "ark-ff/parallel" ]
r1cs = [ "ark-r1cs-std", "tracing", "ark-nonnative-field", "ark-sponge/r1cs" ]

[dev-dependencies]
ark-ed-on-bls12-381 =  { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }
ark-bls12-377 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }
ark-mnt4-298 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }
ark-mnt6-298 = { git = "https://github.com/SRI-CSL/curves", default-features = false, features = [ "r1cs" ], branch = "v3_sri" }
